Cabal/tests/ParserTests/errors/version-sets-1.cabal
cabal-version:       2.5
name:                version-sets
version:             0
synopsis:            version set notation

library
  default-language: Haskell2010
  build-depends: network == { }
